--- a/06_formularios.css
+++ b/06_formularios.css
@@ -14,6 +14,83 @@ h1 {
 }
 
 /* Container do formulário */
+.formulario {
+    background: white;
+    max-width: 500px;
+    margin: 0 auto; /* Centraliza horizontalmente */
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 10px 30px rgb(0,0,0,0.2)
+}
+label {
+    color: #333;
+    font-weight: bold;
+    /* Transforma o elemento "Label" em um elemento inline como o (Span ou <a>) mas com comportamento como block */
+    display: inline-block; 
+    margin-bottom: 5px;
+}
+input[type="Text"],
+input[type="email"],
+input[type="password"],
+select,
+textarea {
+    width: 100%;
+    padding: 10px;
+    border: 2px solid #ddd;
+    border-radius: 5px;
+    font-size: 14px; 
+    transition: border-color 0.3s;
+    /* Inclui padding (mantendo a largura) */
+    box-sizing: border-box;
+}
+/* Foco nos campos (focus) */
+input:focus,
+select:focus,
+textarea:focus {
+    outline: none; /* Remove a borda padrão */
+    border-color: #667eea;
+    background-color: #ebebef;
 
+}
+/*  Radio e checkbox */
+input[type="radio"],
+input[type="checkbox"] {
+    margin-right: 5px; 
+    cursor: pointer;
+}
 
-/* Continuar digitação (Aqui) */
+/* Permitir redimensionamento somente na vertical */
+textarea {
+    resize: vertical;
+}
+
+/* Estilo dos Botões (Gerais) */
+button {
+    padding: 12px 30px;
+    border: none; 
+    border-radius: 5px;
+    font-size: 16px;
+    cursor: pointer;
+    margin-right: 10px;
+    transition: all 0.3s;
+}
+/* Estilo do botão enviar */
+.btn-enviar {
+    background-color: #582cc8;
+    color: #fff;
+}
+.btn-enviar:hover {
+    background-color: #45229c;
+    transform: translateY(-2px); /* Move para cima levemente */
+}
+
+/* Estilo do botão limpar */
+.btn-limpar {
+    background-color: #3330d8;
+    color: #fff;
+}
+.btn-limpar:hover {
+    background-color: #2826ac;
+    transform: translateY(-2px); /* Move para cima levemente */
+}
+
